@@ -1,7 +1,8 @@
 /* $Id: connecthostport.c,v 1.15 2015/10/09 16:26:19 nanard Exp $ */
-/* Project : miniupnp
+/* vim: tabstop=4 shiftwidth=4 noexpandtab
+ * Project : miniupnp
  * Author : Thomas Bernard
- * Copyright (c) 2010-2017 Thomas Bernard
+ * Copyright (c) 2010-2018 Thomas Bernard
  * This software is subject to the conditions detailed in the
  * LICENCE file provided in this distribution. */
 
@@ -60,10 +61,11 @@
 /* connecthostport()
  * return a socket connected (TCP) to the host and port
  * or -1 in case of error */
-int connecthostport(const char * host, unsigned short port,
-                    unsigned int scope_id)
+SOCKET connecthostport(const char * host, unsigned short port,
+                       unsigned int scope_id)
 {
-	int s, n;
+	SOCKET s;
+	int n;
 #ifdef USE_GETHOSTBYNAME
 	struct sockaddr_in dest;
 	struct hostent *hp;
@@ -82,15 +84,15 @@ int connecthostport(const char * host, unsigned short port,
 	if(hp == NULL)
 	{
 		herror(host);
-		return -1;
+		return INVALID_SOCKET;
 	}
 	memcpy(&dest.sin_addr, hp->h_addr, sizeof(dest.sin_addr));
 	memset(dest.sin_zero, 0, sizeof(dest.sin_zero));
 	s = socket(PF_INET, SOCK_STREAM, 0);
-	if(s < 0)
+	if(ISINVALID(s))
 	{
 		PRINT_SOCKET_ERROR("socket");
-		return -1;
+		return INVALID_SOCKET;
 	}
 #ifdef MINIUPNPC_SET_SOCKET_TIMEOUT
 	/* setting a 3 seconds timeout for the connect() call */
@@ -129,7 +131,7 @@ int connecthostport(const char * host, unsigned short port,
 		if(getsockopt(s, SOL_SOCKET, SO_ERROR, &err, &len) < 0) {
 			PRINT_SOCKET_ERROR("getsockopt");
 			closesocket(s);
-			return -1;
+			return INVALID_SOCKET;
 		}
 		if(err != 0) {
 			errno = err;
@@ -141,7 +143,7 @@ int connecthostport(const char * host, unsigned short port,
 	{
 		PRINT_SOCKET_ERROR("connect");
 		closesocket(s);
-		return -1;
+		return INVALID_SOCKET;
 	}
 #else /* #ifdef USE_GETHOSTBYNAME */
 	/* use getaddrinfo() instead of gethostbyname() */
@@ -179,13 +181,13 @@ int connecthostport(const char * host, unsigned short port,
 #else
 		fprintf(stderr, "getaddrinfo() error : %s\n", gai_strerror(n));
 #endif
-		return -1;
+		return INVALID_SOCKET;
 	}
 	s = -1;
 	for(p = ai; p; p = p->ai_next)
 	{
 		s = socket(p->ai_family, p->ai_socktype, p->ai_protocol);
-		if(s < 0)
+		if(ISINVALID(s))
 			continue;
 		if(p->ai_addr->sa_family == AF_INET6 && scope_id > 0) {
 			struct sockaddr_in6 * addr6 = (struct sockaddr_in6 *)p->ai_addr;
@@ -227,7 +229,7 @@ int connecthostport(const char * host, unsigned short port,
 				PRINT_SOCKET_ERROR("getsockopt");
 				closesocket(s);
 				freeaddrinfo(ai);
-				return -1;
+				return INVALID_SOCKET;
 			}
 			if(err != 0) {
 				errno = err;
@@ -246,15 +248,15 @@ int connecthostport(const char * host, unsigned short port,
 		}
 	}
 	freeaddrinfo(ai);
-	if(s < 0)
+	if(ISINVALID(s))
 	{
 		PRINT_SOCKET_ERROR("socket");
-		return -1;
+		return INVALID_SOCKET;
 	}
 	if(n < 0)
 	{
 		PRINT_SOCKET_ERROR("connect");
-		return -1;
+		return INVALID_SOCKET;
 	}
 #endif /* #ifdef USE_GETHOSTBYNAME */
 	return s;
